# ClickHaskell

./: .envrc  .gitignore  .hlint.yaml  .sops.yaml  ChangeLog.md  ClickHaskell.cabal  ClickHaskell.hs  LICENSE  README.md  cabal.project  clickhouse-client.xml  design.md  flake.nix  hackage.nix  hie.yaml  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  secrets.yaml  template.html  tsconfig.json
ClickHaskell/: ClickHaskell.cabal  ClickHaskell.hs  Parameters.hs  Versioning.hs
ClickHaskell-client/: ClickHaskell-client.cabal
ClickHaskell-client/lib/ClickHaskell/: Buffering.hs  Client.hs  ClientV2.hs  ClientV2List.hs  ClientV3.hs
ClickHaskell-client/test/: Main.hs
ClickHaskell-client/test/Test/: Headers.hs
ClickHaskell-generics/: ClickHaskell-generics.cabal
ClickHaskell-generics/lib/ClickHaskell/: Generics.hs
ClickHaskell-http-client/: ClickHaskell-http-client.cabal
ClickHaskell-http-client/ClickHaskell/: Client.hs  Tables.hs
ClickHaskell-http-client/lib/ClickHaskell/: Client.hs
ClickHaskell-tables/: ClickHaskell-tables.cabal  README.md
ClickHaskell-tables/lib/ClickHaskell/: Columns.hs  Tables.hs
ClickHaskell/ClickHaskell/: Columns.hs  DbTypes.hs  DeSerialization.hs  Deserialization.hs  Lock.hs  Native.hs  NativeProtocol.hs  Parameters.hs  Serialization.hs  Tables.hs  Versioning.hs
ClickHaskell/ClickHaskell/Native/: Packets.hs  Serialization.hs  Versioning.hs
ClickHaskell/ClickHaskell/NativeProtocol/: ClientPackets.hs  Columns.hs  Parameters.hs  Serialization.hs  ServerPackets.hs  Versioning.hs
ClickHaskell/lib/ClickHaskell/: DbTypes.hs  HTTP.hs  Reading.hs  Tables.hs  Writing.hs
ClickHouse-db-types/: ClickHouse-db-types.cabal  README.md
ClickHouse-db-types/lib/ClickHouse/: DbTypes.hs
ClickHouse-lock/: ClickHouse-lock.cabal  LICENSE
ClickHouse-lock/app/: Main.hs
ClickHouse-lock/lib/ClickHouse/: Lock.hs
QA/: QA.cabal  README.md
QA/contribution/: contribution.cabal  documentation.lhs
QA/development/: README.md  begin.md
QA/documentation/: LICENSE  README.lhs  documentation-compiler.hs  tmpl-main.html
QA/documentation-compiler/: documentation-compiler.hs  tmpl-main.html
QA/profiling/: OneBillionStream.hs  Simple.hs
QA/testing/: IntegrationTests.hs  README.lhs  T1QuerySerialization.hs  T2WriteReadEquality.hs  T3Multithreading.hs  tests.cabal
QA/usage/: README.md  insertInto.lhs  selectFromView.lhs  usage.cabal
assets/: index.css  (+2 more)
clickhouse-lock/: ClickHouseLock.hs  clickhouse-lock.cabal
clickhouse-lock/lib/ClickHouse/: Lock.hs
contribution/: begin.md  contribution.cabal  documentation.lhs  documentation.nix  genSettings.nix  localServer.nix  prof.nix  project.nix  server.cabal  server.hs  systemModule.nix  template.html  testing.nix
contribution/certs/: localhost.crt  localhost.key
contribution/documentation/: documentation.cabal  index.lhs
contribution/html2hs/: Html2Hs.hs  html2hs.cabal
contribution/modules/protocol-docs/: ChProtocolDocs.hs  ClickHaskell-protocol-docs.cabal
contribution/modules/visits/: ChVisits.hs
contribution/server/: index.hs  server.cabal
contribution/ui/: components.json  package.json  tsconfig.json
contribution/ui/src/: globals.css  index.ts
core/: ClickHaskell.cabal
core/src/: ClickHaskell.hs  ToDelete.hs
dev/: README.md  dev.cabal
dev/clickhouse/: example.sql
dev/de-serialization/: Main.hs
dev/lib/: Examples.hs
dev/profiling/: Main.hs
distribution/: ChangeLog.md  ClickHaskell.cabal  ClickHaskell.hs  README.md  project.nix  server.cabal  server.hs  system.nix  systemModule.nix
distribution/ClickHaskell/: Columns.hs  DbTypes.hs  DeSerialization.hs  NativeProtocol.hs  Parameters.hs  Versioning.hs
documentation/: ClickHaskell-documentation.cabal  README.md  components.json  contribution.html  developer.md  development.md  documentation-compiler.cabal  documentation-compiler.hs  documentation.nix  example-view-reading.lhs  example-writing.lhs  index.html  package.json  result  tsconfig.json  user.md  vite.config.js  vite.config.ts
documentation/app/: entry.client.tsx  index.css  root.tsx
documentation/compiler/: tmpl-article.html  tmpl-code.html  tmpl-default.html
documentation/developer/: begin.md  routines.md
documentation/docs/: contribution.mdx
documentation/hakyll/: Main.hs  index.html
documentation/parametrized-view/: README.lhs  example-parametrized-view.cabal
documentation/testing/: T1QuerySerialization.hs  T2WriteReadEquality.hs  T3Multithreading.hs  T4MissmatchErrors.hs  T5Settings.hs  index.lhs  tests.cabal
documentation/usage/: index.lhs  usage.cabal
documentation/user/: example-view-reading.lhs
documentation/write-read/: README.lhs  example-write-read.cabal
documentation/writing/: Writing.lhs  example-writing.cabal
ecosystem/eventlog2ch/: ClickHaskell-eventlog-writer.cabal  README.md  eventlog-agent.cabal  eventlog-agent.hs
integration-testing/: IntegrationTests.hs  T1QuerySerialization.hs  T2WriteReadEquality.hs  integration-tests.cabal
integration-testing/IntegrationTests/: QuerySerialization.hs  Serialization.hs  WriteReadEquality.hs
integration-testing/app/: Main.hs
integration-testing/clickhouse/: writeReadEquality.sql
integration-testing/lib/: IntegrationTests.hs
profiler/: README.md  profiler.cabal
profiling/: OneBillionStream.hs  Profiler.hs  ProfilerV2.hs  ProfilerV2List.hs  ProfilerV3.hs  profilers.cabal
sandbox/: README.md  sandbox.cabal
sandbox/executable/: Main.hs
sandbox/src/: Bench.hs  Example.hs  Insert.hs  Sandbox.hs  Select.hs  WriteTest.hs
testing/: PT1Simple.hs  PT2OneBillionStream.hs  README.lhs  T1QuerySerialization.hs  T2WriteReadEquality.hs  T3Multithreading.hs  T4MissmatchErrors.hs  index.lhs  performance.nix  testing.nix  tests.cabal
usage/: generateRandom.lhs  index.html  index.lhs  insertInto.lhs  selectFromView.lhs  usage.cabal
usage/generateRandom/: generateRandom.cabal  index.cabal  index.lhs
usage/insertInto/: index.lhs  insertInto.cabal
usage/select/: index.lhs  select.cabal
usage/selectFromView/: index.cabal  index.lhs  selectFromView.cabal
(+160 files in other folders)
