Cabal-version: 3.4


Name:           ClickHaskell
Version:        0.2.0

Author:         Kovalev Dmitry
Maintainer:     Kovalev Dmitry
Category:       ClickHouse
Synopsis:       ClickHouse driver
Description:    Small dependency footprint highlevel ClickHouse driver 
Tested-with:    GHC == 9.4.8, GHC == 9.6.6, GHC == 9.8.4, GHC == 9.10.1
Homepage:       https://clickhaskell.dev/
Bug-reports:    https://git.clickhaskell.dev/
License:        BSD-3-Clause
License-File:   LICENSE
Copyright:      2023 Kovalev Dmitry
Build-Type:     Simple

extra-doc-files:
  README.md
  ChangeLog.md

Source-repository head
  Type: git
  Location: https://github.com/KovalevDima/ClickHaskell

Library
  Autogen-Modules:
    Paths_ClickHaskell
  Exposed-Modules:
    ClickHaskell
  Other-Modules:
    Paths_ClickHaskell
  HS-Source-Dirs:
    ./
  GHC-Options:
    -Wall
    -fno-warn-type-defaults
    -Wunused-packages

  Build-depends:
    -- GHC included libraries
      base >= 4.7 && <5
    , bytestring < 0.13
    , binary < 9
    , deepseq < 1.6
    , text < 2.2
    , time < 1.13

    -- External dependencies
    , network
    , wide-word < 0.2
  Default-language: Haskell2010
