Cabal-version: 3.4


Name:           ClickHaskell-client
Version:        0.0.0.1

Author:         Kovalev Dmitry
Maintainer:     Kovalev Dmitry
Category:       ClickHouse
Synopsis:       DSL for integration ClickHouse
Description:    DSL for describing ClickHouse integration, data manipulation and integration testing
Homepage:       https://github.com/KovalevDima/ClickHaskell#readme
Bug-reports:    https://github.com/KovalevDima/ClickHaskell/issues
License:        BSD-3-Clause
License-File:   ./LICENSE
Copyright:      2023 Kovalev Dmitry
Build-Type:     Simple


Flag release
  Description: Pre-release build options
  Manual: True
  Default: False

Flag dev
  Description: Dump core
  Manual: True
  Default: False


Source-repository head
  Type: git
  Location: https://github.com/KovalevDima/ClickHaskell
  Subdir: ClickHaskell


Library
  Autogen-Modules:
    Paths_ClickHaskell_client
  Exposed-Modules:
    ClickHaskell.Buffering
    ClickHaskell.Client
  Other-Modules:
    Paths_ClickHaskell_client
  HS-Source-Dirs:
    ./lib
  GHC-Options:
    -Wall
    -fno-warn-type-defaults
    -Wunused-packages

  if flag(release)
    GHC-Options: -Werror

  if flag(dev)
    GHC-Options: -ddump-to-file -ddump-simpl -dsuppress-type-applications -dsuppress-coercions -dsuppress-idinfo -dsuppress-type-signatures -dsuppress-var-kinds -dsuppress-module-prefixes -dsuppress-uniques

  Build-depends:
    -- Internal
      ClickHaskell-generics < 0.1
    , ClickHaskell-tables < 0.1

    -- GHC included
    , base >= 4.7 && <5
    , bytestring < 0.13
    , deepseq < 1.6
    , stm < 2.6
    , text < 2.2

    -- External
    , conduit < 1.4
    , http-conduit < 2.4
    , http-client < 0.8
    , http-types < 0.13
  Default-language: Haskell2010
  Default-Extensions:
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    TypeApplications
    TypeFamilies
    TypeOperators
    ScopedTypeVariables

Test-Suite spec
  Type: exitcode-stdio-1.0
  Main-is: Main.hs
  Other-modules:
    Test.Headers
  Hs-Source-Dirs: test
  Build-depends:
    -- Internal
      ClickHaskell-client < 0.1
    
    -- GHC included
    , base >= 4.7 && <5
    , bytestring

    -- External
    , tasty
    , tasty-hunit
  default-language:   Haskell2010
