Cabal-version: 3.4


Name:           ClickHaskell-http-client
Version:        0.0.0.1

Author:         Kovalev Dmitry
Maintainer:     Kovalev Dmitry
Category:       ClickHouse
Synopsis:       ClickHouse driver
Description:    ClickHaskell bindings to http-client for HTTP protocol
Homepage:       https://github.com/KovalevDima/ClickHaskell#readme
Bug-reports:    https://github.com/KovalevDima/ClickHaskell/issues
License:        BSD-3-Clause
License-File:   LICENSE
Copyright:      2023 Kovalev Dmitry
Build-Type:     Simple


Flag release
  Description: Pre-release build options
  Manual: True
  Default: False

Flag dev
  Description: Dump core
  Manual: True
  Default: False


Source-repository head
  Type: git
  Location: https://github.com/KovalevDima/ClickHaskell
  Subdir: ClickHaskell


Library
  Autogen-Modules:
    Paths_ClickHaskell_http_client
  Exposed-Modules:
    ClickHaskell.Client
  Other-Modules:
    Paths_ClickHaskell_http_client
  HS-Source-Dirs:
    ./
  GHC-Options:
    -Wall
    -fno-warn-type-defaults
    -Wunused-packages

  if flag(release)
    GHC-Options: -Werror

  if flag(dev)
    GHC-Options: -ddump-to-file -ddump-simpl -dsuppress-type-applications -dsuppress-coercions -dsuppress-idinfo -dsuppress-type-signatures -dsuppress-var-kinds -dsuppress-module-prefixes -dsuppress-uniques

  Build-depends:
    -- Internal
      ClickHaskell

    -- GHC included
    , base >= 4.7 && <5
    , bytestring < 0.13
    , deepseq < 1.6
    , text < 2.2

    -- External
    , http-client < 0.8
    , http-types < 0.13
  Default-language: Haskell2010
  Default-Extensions:
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    TypeApplications
    TypeFamilies
    TypeOperators
    ScopedTypeVariables
