Cabal-version: 3.4


Name:           ClickHaskell-tables
Version:        0.0.0.1

Author:         Kovalev Dmitry
Maintainer:     Kovalev Dmitry
Category:       ClickHouse
Synopsis:       Tables specfications DSL
Description:    DSL for describing tables 
Homepage:       https://github.com/KovalevDima/ClickHaskell#readme
Bug-reports:    https://github.com/KovalevDima/ClickHaskell/issues
License:        BSD-3-Clause
License-File:   ./LICENSE
Copyright:      2023 Kovalev Dmitry
Build-Type:     Simple


Flag release
  Description: Pre-release build options
  Manual: True
  Default: False

Flag dev
  Description: Dump core
  Manual: True
  Default: False


Source-repository head
  Type: git
  Location: https://github.com/KovalevDima/ClickHaskell
  Subdir: ClickHaskell


Library
  Autogen-Modules:
    Paths_ClickHaskell_tables
  Exposed-Modules:
    ClickHaskell.Tables
  Other-Modules:
    ClickHaskell.Columns
    ClickHaskell.Columns.Alias
    ClickHaskell.Columns.Column
    ClickHaskell.Columns.Default
    ClickHaskell.Columns.Interpreter
    ClickHaskell.Tables.Interpreter
    ClickHaskell.Tables.Table
    ClickHaskell.Tables.View
    Paths_ClickHaskell_tables
  HS-Source-Dirs:
    ./lib
  GHC-Options:
    -Wall
    -fno-warn-type-defaults
    -Wunused-packages

  if flag(release)
    GHC-Options:  -Werror

  if flag(dev)
    GHC-Options: -ddump-to-file -ddump-simpl -dsuppress-type-applications -dsuppress-coercions -dsuppress-idinfo -dsuppress-type-signatures -dsuppress-var-kinds -dsuppress-module-prefixes -dsuppress-uniques

  Build-depends:
    -- Internal
      ClickHouse-db-types < 0.1

    -- GHC included
    , base >= 4.7 && <5
    , bytestring < 0.12
    , text < 2.1

  Default-language: Haskell2010
  Default-Extensions:
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    TypeApplications
    TypeFamilies
    TypeOperators
    ScopedTypeVariables
