Cabal-version: 3.4


Name:           ClickHaskell
Version:        0.0.0.1

Author:         Kovalev Dmitry
Maintainer:     Kovalev Dmitry
Category:       ClickHouse
Synopsis:       ClickHouse driver
Description:    Small dependency footprint highlevel ClickHouse driver 
Homepage:       https://github.com/KovalevDima/ClickHaskell#readme
Bug-reports:    https://github.com/KovalevDima/ClickHaskell/issues
License:        BSD-3-Clause
License-File:   LICENSE
Copyright:      2023 Kovalev Dmitry
Build-Type:     Simple


Flag release
  Description: Pre-release build options
  Manual: True
  Default: False

Flag dev
  Description: Dump core
  Manual: True
  Default: False


Source-repository head
  Type: git
  Location: https://github.com/KovalevDima/ClickHaskell
  Subdir: ClickHaskell


Library
  Autogen-Modules:
    Paths_ClickHaskell
  Exposed-Modules:
    ClickHaskell.DbTypes
    ClickHaskell.HTTP
    ClickHaskell.Reading
    ClickHaskell.Writing
    ClickHaskell.Native
    ClickHaskell.Native.Packets
    ClickHaskell.Native.Serialization
    ClickHaskell.Native.Versioning
    ClickHaskell.Lock
    ClickHaskell.Tables
  Other-Modules:
    Paths_ClickHaskell
  HS-Source-Dirs:
    ./
  GHC-Options:
    -Wall
    -fno-warn-type-defaults
    -Wunused-packages

  if flag(release)
    GHC-Options:  -Werror

  if flag(dev)
    GHC-Options:
      -ddump-to-file
      -ddump-simpl
      -dsuppress-type-applications
      -dsuppress-coercions
      -dsuppress-idinfo
      -dsuppress-type-signatures
      -dsuppress-var-kinds
      -dsuppress-module-prefixes
      -dsuppress-uniques

  Build-depends:
    -- GHC included libraries
      base >= 4.7 && <5
    , bytestring < 0.13
    , deepseq < 1.6
    , network
    , text < 2.2
    , time < 1.13
    , vector < 0.14

    -- External dependencies
    , uuid < 1.4
    , wide-word < 0.2
  Default-language: Haskell2010
  Default-Extensions:
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    TypeApplications
    TypeFamilies
    TypeOperators
    ScopedTypeVariables
