Cabal-version: 3.4


Name:           clickhouse-lock
Version:        0.0.0.1

Author:         Kovalev Dmitry
Maintainer:     Kovalev Dmitry
Category:       ClickHouse
Synopsis:       ClickHouse tables state locker
Description:    A tool that allows you to dump ClickHouse tables API parts such as columns and View parameters
Homepage:       https://github.com/KovalevDima/ClickHaskell#readme
Bug-reports:    https://github.com/KovalevDima/ClickHaskell/issues
License:        BSD-3-Clause
License-File:   LICENSE
Copyright:      2023 Kovalev Dmitry
Build-Type:     Simple


Flag release
  Description: Pre-release build options
  Manual: True
  Default: False

Flag dev
  Description: Dump core
  Manual: True
  Default: False


Source-repository head
  Type: git
  Location: https://github.com/KovalevDima/ClickHaskell
  Subdir: clickhouse-lock


Library
  Autogen-Modules:
    Paths_ClickHouse_lock
  Exposed-Modules:
    ClickHouse.Lock
  Other-Modules:
    Paths_ClickHouse_lock
  HS-Source-Dirs:
    ./lib
  GHC-Options:
    -Wall
    -fno-warn-type-defaults
    -Wunused-packages

  if flag(release)
    GHC-Options:  -Werror

  if flag(dev)
    GHC-Options: -ddump-to-file -ddump-simpl -dsuppress-type-applications -dsuppress-coercions -dsuppress-idinfo -dsuppress-type-signatures -dsuppress-var-kinds -dsuppress-module-prefixes -dsuppress-uniques

  Build-depends:
    -- Internal
      ClickHaskell-client
    , ClickHaskell-generics
    , ClickHaskell-tables
    , ClickHaskell-db-types

    -- GHC included libraries
    , base >= 4.7 && <5
    , bytestring
    , text

    -- External dependencies
    , aeson
    , http-client
    , optparse-applicative
  Default-language: Haskell2010
  Default-Extensions:


executable clickhouse-lock
  main-is: Main.hs
  hs-source-dirs:
    app
  ghc-options: -O2 -threaded -rtsopts "-with-rtsopts=-A32m -AL256m -N"
  build-depends:
    -- Internal
      clickhouse-lock
    -- GHC included
    , base
