Cabal-version:      3.4


name:               QA
version:            0.0.0.1
build-type:         Simple
license:            BSD-3-Clause
license-file:       documentation/LICENSE

data-files:
  usage/*.lhs
  ./documentation/*.html
  README.md

common dump-core
  ghc-options:
    -dlint
    -ddump-to-file
    -ddump-simpl
    -ddump-spec
    -ddump-simpl-stats
    -ddump-rule-firings
    -dsuppress-type-applications
    -dsuppress-coercions
    -dsuppress-idinfo
    -dsuppress-type-signatures
    -dsuppress-var-kinds
    -dsuppress-module-prefixes
    -dsuppress-uniques

executable documentation-compiler
  default-language: GHC2021
  hs-source-dirs: .
  main-is: documentation/README.lhs
  build-depends:
      base
    , hakyll
    , bytestring
    , filepath
    , time
    , pandoc
  ghc-options:
    -threaded -Wall
    -main-is DocumentationCompiler
    -pgmL markdown-unlit
  build-tool-depends: markdown-unlit:markdown-unlit

-- * Testing

executable tests
  main-is: README.lhs
  hs-source-dirs: testing
  ghc-options:
    -O2 -threaded -rtsopts
    -main-is Tests
    -pgmL markdown-unlit
  build-depends:
      ClickHaskell
    , async
    , base >=4.7 && <5
    , bytestring
  other-modules:
    T1QuerySerialization
    T2WriteReadEquality
    T3Multithreading
  build-tool-depends: markdown-unlit:markdown-unlit
  default-language: Haskell2010



-- * API

executable insertInto
  import: dump-core
  default-language: GHC2021
  main-is: usage/insertInto.lhs
  build-depends:
      ClickHaskell
    , base >=4.7 && <5
    , bytestring
  ghc-options:
    -pgmL markdown-unlit
    -main-is Writing
    -Wall
  build-tool-depends: markdown-unlit:markdown-unlit

executable selectFromView
  import: dump-core
  default-language: GHC2021
  main-is: usage/selectFromView.lhs
  build-depends:
      ClickHaskell
    , base >=4.7 && <5
  ghc-options:
    -pgmL markdown-unlit
    -main-is ReadingView
    -Wall
  build-tool-depends: markdown-unlit:markdown-unlit


-- * Profiling

executable prof-simple
  import: dump-core
  main-is: Simple.hs
  hs-source-dirs: profiling
  ghc-options:
    -O2 -threaded
    -main-is Simple
    -Wall
  ghc-prof-options:
    -fprof-late
    -rtsopts "-with-rtsopts=-s -A32m -AL256m -p -hy -L250 -l-agu -N1"
  build-depends:
      ClickHaskell
    , base
    , bytestring

executable prof-1bil-stream
  import: dump-core
  main-is: OneBillionStream.hs
  hs-source-dirs: profiling
  ghc-options:
    -O2 -threaded
    -main-is OneBillionStream
    -Wall
  ghc-prof-options:
    -fprof-late
    -rtsopts "-with-rtsopts=-s -A8m -AL256m -p -hy -L250 -l-agu -N1"
  build-depends:
      ClickHaskell
    , base
    , bytestring
    , deepseq
