Cabal-version:      3.4


name:               QA
version:            0.0.0.1
build-type:         Simple
license:            BSD-3-Clause
license-file:       LICENSE

data-files:
  usage/*.lhs
  contribution/*.html
  contribution/documentation.lhs

executable documentation-compiler
  default-language: GHC2021
  hs-source-dirs: .
  main-is: contribution/documentation.lhs
  build-depends:
      base
    , hakyll
    , bytestring
    , filepath
    , time
    , pandoc
  ghc-options:
    -threaded -Wall
    -main-is DocumentationCompiler
    -pgmL markdown-unlit
  build-tool-depends: markdown-unlit:markdown-unlit

-- * Testing

executable tests
  main-is: README.lhs
  hs-source-dirs: testing
  ghc-options:
    -O2 -threaded -rtsopts
    -main-is Tests
    -pgmL markdown-unlit
  build-depends:
      ClickHaskell
    , async
    , base >=4.7 && <5
    , bytestring
  other-modules:
    T1QuerySerialization
    T2WriteReadEquality
    T3Multithreading
  build-tool-depends: markdown-unlit:markdown-unlit
  default-language: Haskell2010



-- * API

executable insertInto
  default-language: GHC2021
  main-is: usage/insertInto.lhs
  build-depends:
      ClickHaskell
    , base >=4.7 && <5
    , bytestring
  ghc-options:
    -pgmL markdown-unlit
    -main-is Writing
    -Wall
  build-tool-depends: markdown-unlit:markdown-unlit

executable selectFromView
  default-language: GHC2021
  main-is: usage/selectFromView.lhs
  build-depends:
      ClickHaskell
    , base >=4.7 && <5
  ghc-options:
    -pgmL markdown-unlit
    -main-is ReadingView
    -Wall
  build-tool-depends: markdown-unlit:markdown-unlit
