Cabal-version:      3.0
name:               server
version:            0.0.0.1
build-type:         Simple
license:            BSD-3-Clause

executable server
  default-language: Haskell2010
  main-is: server.hs
  build-depends:
      ClickHaskell-visits
    , aeson
    , async
    , base >=4.7 && <5
    , bytestring
    , directory
    , eventlog-socket
    , filepath
    , http-types
    , ip
    , unordered-containers
    , mime-types
    , network
    , text
    , time
    , stm
    , wai
    , warp
    , wai-websockets
    , websockets
  ghc-options:
    -threaded
    -Wall -Wunused-packages
    -rtsopts
    "-with-rtsopts=-T -A8m -AL32m -N"

  if impl(ghc >= 9.4)
    ghc-options:
      "-with-rtsopts=-T -A8m -AL32m -N --null-eventlog-writer"
