Cabal-version:      3.4


name:               ClickHaskell-documentation
version:            0.0.0.1
build-type:         Simple
license:            BSD-3-Clause
license-file:       LICENSE

data-files:
  parametrized-view/README.lhs
  write-read/README.lhs
  hakyll/**/*.css
  hakyll/**/*.html
  hakyll/*.html

executable ClickHaskell-documentation
  default-language: Haskell2010
  hs-source-dirs: hakyll/
  main-is: Main.hs
  ghc-options: -threaded
  
  build-depends:
    base
    , hakyll
    , binary
    , bytestring
    , filepath
    , time
