Cabal-version:      3.4


name:               ClickHaskell-documentation
version:            0.0.0.1
build-type:         Simple
license:            BSD-3-Clause
license-file:       LICENSE

data-files:
  parametrized-view/README.lhs
  writing/Writing.lhs
  hakyll/**/*.html
  README.md

executable ClickHaskell-documentation
  default-language: GHC2021
  hs-source-dirs: hakyll/
  main-is: Main.hs
  ghc-options: -threaded
  
  build-depends:
      base
    , hakyll
    , bytestring
    , filepath
    , time
