Cabal-version:      3.4


name:               documentation-compiler
version:            0.0.0.1
build-type:         Simple
license:            BSD-3-Clause
license-file:       LICENSE

data-files:
  example-view-reading.lhs
  example-writing.lhs
  hakyll/**/*.html
  README.md

executable documentation-compiler
  default-language: GHC2021
  hs-source-dirs: hakyll/
  main-is: Main.hs
  ghc-options: -threaded
  
  build-depends:
      base
    , hakyll
    , bytestring
    , filepath
    , time


executable example-writing
  default-language: GHC2021
  main-is: example-writing.lhs
  build-depends:
    -- Internal
      ClickHaskell

    -- GHC included
    , base >=4.7 && <5
    , bytestring
    , stm

    -- External
    , markdown-unlit
  ghc-options:
    -pgmL markdown-unlit
    -Wall
    -main-is Writing
  build-tool-depends: markdown-unlit:markdown-unlit


executable example-view-reading
  default-language: GHC2021
  main-is: example-view-reading.lhs
  build-depends:
    -- Internal
      ClickHaskell

    -- GHC included
    , base >=4.7 && <5
    , bytestring

    -- External
    , markdown-unlit
  ghc-options: -Wall -pgmL markdown-unlit
  build-tool-depends: markdown-unlit:markdown-unlit
