cabal-version: 3.4


name:               integration-tests
version:            0.0.0.1
author:             Kovalev Dmitry
maintainer:         https://github.com/KovalevDima
description:        Integration testing
homepage:           https://github.com/KovalevDima/ClickHaskell/integration-testing#readme
bug-reports:        https://github.com/KovalevDima/ClickHaskell/issues
License:            BSD-3-Clause
License-File:       ./LICENSE
copyright:          2023 Kovalev Dmitry
build-type:         Simple

source-repository head
  type: git
  location: https://github.com/KovalevDima/ClickHaskell
  subdir: integration-testing


library
  exposed-modules:
      IntegrationTests.Serialization
      IntegrationTests.WriteReadEquality
  other-modules:
      Paths_integration_tests
  hs-source-dirs: .
  ghc-options:
    -Wall -fno-warn-type-defaults -O2
    -Wunused-packages
    -ddump-to-file -ddump-simpl -dsuppress-type-applications -dsuppress-coercions -dsuppress-idinfo -dsuppress-type-signatures -dsuppress-var-kinds -dsuppress-module-prefixes -dsuppress-uniques

  build-depends:
    -- Internal
      ClickHaskell
    , ClickHaskell-http-client

    -- GHC included
    , base >=4.7 && <5
    , bytestring

    -- External
    , http-client < 0.8
  default-language: Haskell2010


executable integration-tests
  main-is: IntegrationTests.hs
  hs-source-dirs: .
  ghc-options: -O2 -threaded -rtsopts -main-is IntegrationTests
  build-depends:
    -- Internal
      ClickHaskell
    , ClickHaskell-http-client
    , integration-tests

    -- GHC included
    , base >=4.7 && <5
    , bytestring

    -- External
    , http-client < 0.8
  default-language: Haskell2010
